--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>10 Panoramas</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>VR Панорамы</title>
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
     <div class="container">
-        <h1>Выберите панораму:</h1>
-        <div class="panorama-grid" id="panorama-links">
-            
-        </div>
+        <h1>Выберите панораму</h1>
+        <div class="panorama-grid" id="panorama-links"></div>
     </div>
     <script src="data/config.js"></script>
 </body>
