--- a/panorama/viewer.html
+++ b/panorama/viewer.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Панорама</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Просмотр панорамы</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.css">
     <link rel="stylesheet" href="../styles/panorama.css">
 </head>
 <body>
     <div id="panorama-viewer"></div>
     
-    
-    <div class="nav-buttons">
-        <button class="nav-button prev-button">◄ Назад</button>
-        <button class="nav-button close-button">✕ Закрыть</button>
-        <button class="nav-button next-button">Далее ►</button>
+    <div class="controls">
+        <button class="control-btn prev-btn">◄</button>
+        <button class="control-btn close-btn">✕</button>
+        <button class="control-btn next-btn">►</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
