--- a/index.html
+++ b/index.html
@@ -7,9 +7,52 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Выберите панораму</h1>
-        <div class="panorama-grid" id="panorama-links"></div>
+    <div class="main">
+        <div class="header">
+            <img src="./img/logo.png" alt="">
+            <h3>Сатыбалды Нааматов атындагы Нарын мамлекеттик университети</h3>
+        </div>
+        <div class="sectionOne">
+            <h1>Университет, вдохновляющий на открытия. <br> Присоединяйтесь к НГУ – даже виртуально!</h1>
+            <img src="./img/section1.png" alt="">
+        </div>
+        <div class="container">
+            <h1>Выберите панораму</h1>
+            <div class="panorama-grid" id="panorama-links"></div>
+        </div>
+        <div class="sectionTwo" style="border-bottom: 1px solid black; padding-bottom: 60px;">
+            <h2 style="font-size: 40px;"> О нас</h2>
+            <div class="aboutMain">
+                <div class="about">
+                    <h4 style="font-size: 20px;">Мы создаем будущих лидеров. <br> Виртуальный тур – ваш первый шаг в мир <br> качественного образования</h2>
+                    <p style="font-size: 16px;">Национальный университет имени С. Нааматова (НГУ) – это современный <br> образовательный центр, 
+                        где сочетаются академические традиции и <br> инновационные технологии. Наша миссия – готовить 
+                        профессионалов, <br> способных менять мир к лучшему.</p>
+                </div>
+                <div class="aboutTwo">
+                    <p style="font-size: 16px;"> <strong style="font-size: 20px;"> С помощью виртуального тура вы сможете:</strong> <br> <br>
+                    ✅ Познакомиться с кампусом и инфраструктурой университета <br><br>
+                    ✅ Увидеть аудитории, лаборатории и научные центры <br><br>
+                    ✅ Ощутить атмосферу студенческой жизни</p>
+                </div>
+            </div>
+            <h3 style="text-align: center; margin-top: 20px;"><strong>Присоединяйтесь к НГУ – вашему будущему!</strong></h3>
+        </div>
+        <div class="sectionThreeMain">
+            <h2 style="font-size: 40px; text-align: center;">Наши студенты</h2>
+            <div class="sectionThree">
+                <img src="./img/11.jpg" alt="">
+                <img src="./img/12.jpg" alt="">
+                <img src="./img/13.jpg" alt="">
+                <img src="./img/14.jpg" alt="">
+                <img src="./img/15.jpg" alt="">
+                <img src="./img/16.jpg" alt="">
+            </div>
+        </div>
+        <div class="footer" style="background-color: rgb(59, 58, 58);">
+            <p style="color: white; text-align: center; padding: 20px 0 20px 0;">© 2024 НГУ им. С. Нааматова</p>
+        </div>
+
     </div>
     <script src="data/config.js"></script>
 </body>
